[gd_scene load_steps=6 format=3 uid="uid://dp1abdda2loci"]

[ext_resource type="Script" path="res://Scripts/CombatSystem.gd" id="1_v4yci"]
[ext_resource type="PackedScene" uid="uid://cigvwoddf8by6" path="res://Hitboxes/Hurtbox.tscn" id="2_k1qlw"]
[ext_resource type="PackedScene" uid="uid://cyjjqo1nejdvc" path="res://Hitboxes/Hitbox.tscn" id="3_xu0xo"]
[ext_resource type="PackedScene" uid="uid://27u2knvqbfay" path="res://Scenes/Stats.tscn" id="4_eqfgx"]
[ext_resource type="Script" path="res://Scripts/SlowMotion.gd" id="5_d2csd"]

[node name="CombatSystem" type="Node2D"]
script = ExtResource("1_v4yci")
hitboxRadius = 5.0

[node name="HurtBox" parent="." instance=ExtResource("2_k1qlw")]

[node name="HitBox" parent="." instance=ExtResource("3_xu0xo")]

[node name="Stats" parent="." instance=ExtResource("4_eqfgx")]

[node name="SlowMotion" type="Node" parent="."]
script = ExtResource("5_d2csd")

[connection signal="area_entered" from="HitBox" to="." method="_on_hitbox_area_entered"]
